--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -11,46 +11,44 @@
 
 <div class="login-form-1">
     <h3>Tvoj profil</h3>
-    <form method="post" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
+
         <div class="float-sm-left">
             <img src="{{ user.student.profile_image.url }}" width="240" class="rounded-circle"><br>
             <label for="id_profile_image" class="btn btn-default"></label>
-            <input type="file" class="form-control-sm" name="profile_image"  accept="image/*" id="id_profile_image">
+            <input type="file" class="form-control-sm" name="profile_image" id="id_profile_image">
         </div>
 
         <div class="row">
             <div class="float-sm-right">
 
                 <div class="form-group">
-                    <label for="id_username">Korisničko ime</label>
-                    <input type="text" class="form-control" name="username" id="id_username" maxlength="150" value="{{user.username}}">
+                    <label for="id_username">Korisničko ime:</label>
+                    <input type="text" name="username" maxlength="150" class="form-control" required="" value="{{user.username}}" id="id_username">
                 </div>
 
                 <div class="form-group">
-                    <label for="id_first_name">Ime</label>
-                    <input type="text" class="form-control" name="first_name" value="{{user.first_name}}" maxlength="30" id="id_first_name">
+                    <label for="id_first_name">Ime:</label>
+                    <input type="text" name="first_name" maxlength="30" class="form-control" value="{{user.first_name}}" id="id_first_name">
                 </div>
 
                 <div class="form-group">
-                    <label for="id_last_name">Prezime</label>
-                    <input type="text" class="form-control" name="last_name" value="{{user.last_name}}" maxlength="30" id="id_last_name">
+                    <label for="id_last_name">Prezime:</label>
+                    <input type="text" name="last_name" maxlength="150" class="form-control" value="{{user.last_name}}" id="id_last_name">
                 </div>
 
-                <div class="form-group">
-                    <label for="id_email">Email</label>
-                    <input type="email" class="form-control disabled" name="email" value="{{user.email}}" maxlength="30" id="id_email">
-                </div>
 
+                Studij
                 <div class="form-group">
-                    {{student_form.studij_id}}
+                    {{student_form.studij}}
                 </div>
 
                 <div class="form-group">
                     <a href="{% url 'account:change_password' %}" class="ForgetPwd">Promijeni lozinku</a>
                 </div>
 
-                <button type="submit" class="btnSubmit"> Spremi promjene </button>
+                <button type="submit" class="btnSubmit" style="width: 100px; height: 50px">Spremi </button>
 
             </div>
         </div>
