--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -27,7 +27,7 @@
 							</div>
 							<nav class="main_nav_contaner ml-auto">
 								<ul class="main_nav">
-									<li class="active"><a href="{% url 'homepage' %}">Početna</a></li>
+									<li><a href="{% url 'homepage' %}">Početna</a></li>
                                     <li>
 										<a href="{% url 'studij:homepage'%}">Arhiva kolegija</a>
 									</li>
@@ -57,7 +57,7 @@
 	</header>
 
 
-	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
+	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400" style="width: 200px">
 		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
 		<!--<div class="search">-->
 			<!--<form action="#" class="header_search_form menu_mm">-->
