--- a/account/templates/account/change_password.html
+++ b/account/templates/account/change_password.html
@@ -15,17 +15,17 @@
 
             <div class="form-group">
                 <label for="id_old_password">Stara lozinka:</label><br>
-                <input type="password" name="old_password" autofocus="" required="" id="id_old_password">
+                <input type="password" name="old_password" autofocus="" required="" class="form-control" id="id_old_password">
             </div>
 
             <div class="form-group">
                 <label for="id_new_password1">Nova lozinka:</label><br>
-                <input type="password" name="new_password1" required="" id="id_new_password1">
+                <input type="password" name="new_password1" required="" class="form-control" id="id_new_password1">
             </div>
 
             <div class="form-group">
                 <label for="id_new_password2">Potvrdi novu lozinku:</label><br>
-                <input type="password" name="new_password2" required="" id="id_new_password2">
+                <input type="password" name="new_password2" required="" class="form-control" id="id_new_password2">
             </div>
             <button type="submit" class="btnSubmit">Promijeni</button>
 
