--- a/static/styles/main_styles.css
+++ b/static/styles/main_styles.css
@@ -245,34 +245,7 @@ section
 /*********************************
 3. Header
 *********************************/
-.navbar .dropdown-toggle, .navbar .dropdown-menu a {
-    cursor: pointer;
-}
 
-.navbar .dropdown-item.active, .navbar .dropdown-item:active {
-    color: inherit;
-    text-decoration: none;
-    background-color: inherit;
-}
-
-.navbar .dropdown-item:focus, .navbar .dropdown-item:hover {
-    color: #16181b;
-    text-decoration: none;
-    background-color: #f8f9fa;
-}
-
-@media (min-width: 767px) {
-    .navbar .dropdown-toggle:not(.nav-link)::after {
-        display: inline-block;
-        width: 0;
-        height: 0;
-        margin-left: .5em;
-        vertical-align: 0;
-        border-bottom: .3em solid transparent;
-        border-top: .3em solid transparent;
-        border-left: .3em solid;
-    }
-}
 .header
 {
 	position: fixed;
@@ -486,9 +459,6 @@ section
 	background: #14bdee;
 	content: '';
 }
-
-
-
 .search_button
 {
 	margin-left: 46px;
@@ -588,7 +558,6 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
-	width: 200px;
 }
 .hamburger:hover i
 {
@@ -1151,7 +1120,7 @@ section
 {
 	width: 100%;
 	background: #FFFFFF;
-	z-index: 1;
+	z-index: 2;
 }
 .counter_background
 {
@@ -1227,8 +1196,7 @@ section
 {
 	position: absolute;
 	top: 0;
-	left:10px;
-
+	right: 30px;
 	width: 380px;
 	height: 100%;
 	background: #FFFFFF;
