--- a/templates/backup.html
+++ b/templates/backup.html
@@ -3,279 +3,38 @@
 <html lang="en">
 <head>
 <title>Jež</title>
-
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="Jež project">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+{% include "links.html" %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/about.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/about_responsive.css' %}">
 </head>
 <body>
 
-<div class="super_container">
-
-	<!-- Header -->
-
-	<header class="header">
-
-		{% if not user.is_authenticated %}
-		<div class="top_bar">
-			<div class="top_bar_container">
-				<div class="container">
-					<div class="row">
-						<div class="col">
-							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<ul class="top_bar_contact_list">
-									<li><div class="question">Imaš pitanje?</div></li>
-									<li>
-										<i class="fa fa-envelope-o" aria-hidden="true"></i>
-										<div>info.jez@gmail.com</div>
-									</li>
-								</ul>
-								<div class="top_bar_login ml-auto">
-									<div class="login_button"><a href="{% url 'account:login' %}">Prijavi se</a></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		{% endif %}
-		<!-- Header Content -->
-
-		<div class="header_container">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<div class="header_content d-flex flex-row align-items-center justify-content-start">
-							<div class="logo_container">
-								<a href="#">
-									<img src="{% static 'images/jez.png' %}" class="rounded-circle img-fluid img-thumbnail" style="height:80px;" alt="JezLogo">
-									<div class="logo_text">Jež</div>
-								</a>
-							</div>
-							<nav class="main_nav_contaner ml-auto">
-								<ul class="main_nav">
-									<li class="active"><a href="{% url 'homepage' %}">Početna</a></li>
-									<li> <a href="{% url 'tko_smo:homepage'%}">Tko smo?</a></li>
-									<li><a href="{% url 'za_brucose:homepage'%}">Za brucose</a></li>
-									<li><a href="{% url 'kontakt:kontakt'%}">Kontakt</a></li>
-									<li><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
-									{% if not user.is_authenticated %}
-									<li><a href="{% url 'account:signup'%}">Registriraj se</a></li>
-									{% else %}
-									<li class="dropdown">
-										<a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.get_username }}
-										<span class="caret"></span></a>
-										<ul class="dropdown-menu">
-											<li><a href="{% url 'account:mypage' %}">Moj profil</a></li><br>
-										  	<li><a href="{% url 'account:settings'%}">Postavke</a></li><br>
-											<li><a href="{% url 'account:logout' %}">Odjavi se</a></li><br>
-										</ul>
-      								</li>
-									{% endif %}
-								</ul>
-								<div class="hamburger menu_mm">
-									<i class="fa fa-bars menu_mm" aria-hidden="true"></i>
-								</div>
-							</nav>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-	</header>
-
-	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
-		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
-		<!--<div class="search">-->
-			<!--<form action="#" class="header_search_form menu_mm">-->
-				<!--<input type="search" class="search_input menu_mm" placeholder="Search" required="required">-->
-				<!--<button class="header_search_button d-flex flex-column align-items-center justify-content-center menu_mm">-->
-					<!--<i class="fa fa-search menu_mm" aria-hidden="true"></i>-->
-				<!--</button>-->
-			<!--</form>-->
-		<!--</div>-->
-		<nav class="menu_nav">
-			<ul class="menu_mm">
-				<li class="menu_mm"><a href="{% url 'tko_smo:homepage'%}">Tko smo?</a></li>
-				<li class="menu_mm"><a href="{% url 'za_brucose:homepage'%}">Za brucose</a></li>
-				<li class="menu_mm"><a href="{% url 'kontakt:kontakt'%}">Kontakt</a></li>
-				<li class="menu_mm"><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
-				{% if not user.is_authenticated %}
-					<li class="menu_mm"><a href="{% url 'account:signup'%}">Registriraj se</a></li>
-					<li class="menu_mm"><a href="{% url 'account:login' %}">Prijavi se</a></li>
-				{% else %}
-					<li class="menu_mm"><a href="{% url 'account:mypage' %}">Moj profil</a></li>
-					<li class="menu_mm"><a href="{% url 'account:settings'%}">Postavke</a></li>
-					<li class="menu_mm"><a href="{% url 'account:logout' %}">Odjavi se</a></li>
-
-				{% endif %}
-			</ul>
-		</nav>
-	</div>
-
-
-	{% block content %}
-	<!-- Home -->
-
-	<div class="home">
-		<div class="home_slider_container">
-			<br><br><br><br>
-			<!-- Home Slider, maknuti strelice -->
-			<div class="owl-carousel owl-theme home_slider">
-				<!-- Home Slider Item -->
-				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url({% static 'images/home_slider_1.jpg' %})"></div>
-					<div class="home_slider_content">
-						<div class="container">
-							<div class="row">
-								<div class="col text-center">
-									<div class="home_slider_title">Lorem ipsum dolor sit</div>
-									<div class="home_slider_subtitle">Neki tekst</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Home Slider Nav -->
-
-		<!--<div class="home_slider_nav home_slider_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>-->
-		<!--<div class="home_slider_nav home_slider_next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>-->
-	</div>
-
-	<!-- Features -->
-	<br><br><br><br><br>
-	<div class="features">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title_container text-center">
-						<h2 class="section_title">Welcome To Jež E-Learning</h2>
-						<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
-					</div>
-				</div>
-			</div>
-			<div class="row features_row">
-
-				<!-- Features Item -->
-				<div class="col-lg-3 feature_col">
-					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_1.png" alt=""></div>
-						<h3 class="feature_title">The Experts</h3>
-						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-					</div>
-				</div>
-
-				<!-- Features Item -->
-				<div class="col-lg-3 feature_col">
-					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_2.png" alt=""></div>
-						<h3 class="feature_title">Book & Library</h3>
-						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-					</div>
-				</div>
-
-				<!-- Features Item -->
-				<div class="col-lg-3 feature_col">
-					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_3.png" alt=""></div>
-						<h3 class="feature_title">Best Courses</h3>
-						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-					</div>
-				</div>
-
-				<!-- Features Item -->
-				<div class="col-lg-3 feature_col">
-					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_4.png" alt=""></div>
-						<h3 class="feature_title">Award & Reward</h3>
-						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-
-	<!-- Footer -->
-
-	<footer class="footer">
-		<div class="footer_background" style="background-image:url(images/footer_background.png)"></div>
-		<div class="container">
-			<div class="row footer_row">
-				<div class="col">
-					<div class="footer_content">
-						<div class="row">
-
-							<div class="col-lg-3 footer_col">
-
-								<!-- Footer About -->
-								<div class="footer_section footer_about">
-									<div class="footer_logo_container">
-
-										<a href="{% url 'homepage' %}">
-											<div class="logo_text">Jež</div>
-										</a>
-									</div>
-									<div class="footer_about_text">
-										<p>Lorem ipsum dolor sit ametium, consectetur adipiscing elit.</p>
-									</div>
-									<div class="footer_social">
-										<ul>
-											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row copyright_row">
-				<div class="col">
-					<div class="copyright d-flex flex-lg-row flex-column align-items-center justify-content-start">
-						<div class="cr_text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-						<div class="ml-lg-auto cr_links">
-							<ul class="cr_list">
-								<li><a href="#">Copyright</a></li>
-								<li><a href="#">Uvjeti korištenja</a></li>
-								<li><a href="#">Politika privatnosti</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-</div>
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
-<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
-<script src="{% static 'plugins/easing/easing.js' %}"></script>
-<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
-
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
-<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
-<script src="{% static 'plugins/easing/easing.js' %}"></script>
-<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.2.1.min.js"></script>
+<script src="{% static 'styles/bootstrap4/popper.js"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+<script src="{% static 'plugins/easing/easing.js"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js"></script>
+<script src="{% static 'js/custom.js"></script>
 <script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
 <script src="{% static 'js/course.js' %}"></script>
 <script src="{% static 'js/our_custom.js' %}"></script>
-{% endblock content %}
 
 </body>
 </html>
