--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Jež project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-{% include "links.html" %}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
-<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'styles/about.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'styles/about_responsive.css' %}">
 </head>
 <body>
+
 
 <div class="super_container">
 
@@ -65,9 +63,9 @@
 
 							<nav class="main_nav_contaner ml-auto">
 								<ul class="main_nav">
-									<li id="headerLink" onclick="changeclass(this);" class=""><a href="{% url 'homepage' %}">Početna</a></li>
-									<li id="headerLink" onclick="changeclass(this);"  class=""><a href="{% url 'za_brucose:homepage'%}">Za brucoše</a></li>
-									<li id="headerLink" onclick="changeclass(this);"  class=""><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
+									<li><a href="{% url 'homepage' %}">Početna</a></li>
+									<li><a href="{% url 'za_brucose:homepage'%}">Za brucoše</a></li>
+									<li><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
 									{% if not user.is_authenticated %}
 									<li><a href="{% url 'account:signup'%}">Registriraj se</a></li>
 									{% else %}
@@ -399,21 +397,17 @@
 	</footer>
 </div>
 
-<script src="{% static 'js/jquery-3.2.1.min.js"></script>
-<script src="{% static 'styles/bootstrap4/popper.js"></script>
-<script src="{% static 'styles/bootstrap4/bootstrap.min.js"></script>
-<script src="{% static 'plugins/greensock/TweenMax.min.js"></script>
-<script src="{% static 'plugins/greensock/TimelineMax.min.js"></script>
-<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="{% static 'plugins/greensock/animation.gsap.min.js"></script>
-<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js"></script>
-<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-<script src="{% static 'plugins/easing/easing.js"></script>
-<script src="{% static 'plugins/parallax-js-master/parallax.min.js"></script>
-<script src="{% static 'js/custom.js"></script>
-<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
-<script src="{% static 'js/course.js' %}"></script>
-<script src="{% static 'js/our_custom.js' %}"></script>
-
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 </body>
 </html>
